# cbf-convex-maps

./: .gitignore  CMakeLists.txt  README.md  usage.ipynb
apps/: CMakeLists.txt
apps/cbf_example/: controller.h  quadrotor_cbf_example.cc
apps/kkt_ode_example/: kkt_ode.cc
apps/ma_cbf_example/: controller.h  ma_cbf_example.cc
apps/plots/: kkt_ode_plots.py  kkt_ode_vis.py  ma_cbf_plots.py  ma_cbf_vis.py
apps/plots/utils/: datalog.py  mesh.py
benchmarks/: dense_ldlt_bm.cc  distance_bm.cc  kktode_bm.cc  lemke_bm.cc
c++/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt
c++/apps/: CMakeLists.txt
c++/apps/include/: quadrotor_corridor.h
c++/apps/kkt_ode_example/: kkt_ode.cc  kkt_ode_plots.py
c++/apps/src/: quadrotor_corridor.cc  quadrotor_downwash.cc  quadrotor_shape.cc  quadrotor_uncertainty.cc
c++/apps/tests/: geometry_test.cc
c++/benchmarks/: CMakeLists.txt
c++/cmake/: FindIPOPT.cmake
c++/include/sccbf/: derivatives.h  distance_solver.h  lemke.h  solver_options.h  utils.h
c++/include/sccbf/collision/: collision_info.h  collision_pair.h
c++/include/sccbf/geometry/: convex_set.h  ellipsoid.h  polytope.h  quadrotor_corridor.h  quadrotor_downwash.h  static_ellipsoid.h  static_polytope.h
c++/include/sccbf/math_utils/: numerical_derivatives.h  utils.h
c++/include/sccbf/system/: double_integrator_se3.h  dynamical_system.h  integrator.h  integrator_se.h  quadrotor_reduced.h  unicycle.h  unicycle_se2.h
c++/include/sccbf/utils/: control_utils.h  matrix_utils.h  numerical_derivatives.h
c++/src/: CMakeLists.txt  distance_solver.cc  lemke.cc  lemke.cpp  utils.cpp
c++/src/collision/: collision_pair.cc  distance_solver.cc
c++/src/geometry/: quadrotor_shape.cc  static_polytope.cc
c++/src/math_utils/: numerical_derivatives.cc  numerical_derivatives.cpp
c++/src/transformation/: intersection.cc  minkowski.cc
c++/src/utils/: numerical_derivatives.cc
c++/tests/: CMakeLists.txt  lemke_test.cc  lemke_unittest.cpp  math_utils_unittest.cpp  utils_unittest.cpp
c++/tests/collision/: distance_test.cc
c++/tests/geometry/: geometry_test.cc
c++/tests/math_utils/: logsumexp_test.cc  logsumexp_test.cpp  matrixfunctions_test.cc  matrixfunctions_test.cpp  numericalgradient_test.cc  numericalgradient_test.cpp
c++/tests/system/: system_test.cc
c++/tests/utils/: logsumexp_test.cc  matrixfunctions_test.cc  so3_tracking_plot.py  so3_tracking_test.cc  so3pd_tracking_plot.py  so3pd_tracking_test.cc
cmake/: FindIPOPT.cmake
examples/3d_obstacle_avoidance/: SmoothPolytope4D.m  StaticPolytope4D.m  check_sets.m  control.m  get_clf.m  init.m  main.m  plot_env.m  plot_figure.m  set_env.m
examples/kkt_ode/: FlexibleEllipsoid.m  compare_opt_ode.m  main.m  plot_figure.m  print_stats.m
examples/planar_robots/: Norm4Level.m  OffsetCircles3.m  control.m  generate_functions.m  init.m  main.m  set_env.m
geometry/: AbstractConvexSet.m  RigidEllipsoid.m  SmoothPolytope.m  StaticPolytope.m
include/sccbf/: data_types.h  solver_options.h
include/sccbf/collision/: distance_solver.h
include/sccbf/geometry/: convex_set.h  polytope.h  quadrotor_corridor.h  quadrotor_shape.h  quadrotor_uncertainty.h  static_ellipsoid.h
include/sccbf/system/: double_integrator_se3.h  quadrotor.h
include/sccbf/transformation/: intersection.h  minkowski.h
include/sccbf/utils/: control_utils.h  matrix_utils.h
robot/: Robot.m
robot/system/: DoubleIntegratorSE.m  DynamicalSystem.m  IntegratorNd.m  IntegratorSE.m  SimpleQuadrotor.m  Unicycle.m  UnicycleSE2.m
src/: CMakeLists.txt
src/collision/: collision_pair.cc
src/geometry/: ellipsoid.cc  polytope.cc  quadrotor_corridor.cc  quadrotor_downwash.cc  quadrotor_uncertainty.cc  static_ellipsoid.cc
src/system/: quadrotor.cc  quadrotor_reduced.cc
test/: geometry_test.m  minimum_distance_integration_test.m
tests/: CMakeLists.txt
tests/collision/: distance_test.cc
tests/utils/: matrixfunctions_test.cc  numericalgradient_test.cc
utils/math/: pctl.m  print_constraints.m  sym_derivatives.m
utils/math/logsumexp/: license.txt  logsumexp_a.m  readme.md  softmax_a.m  test.m
utils/set/: SetUtils.m  get_mesh_points.m  get_surf_points.m  minimum_distance.m  minimum_distance_ode.m  minimum_distance_step.m
